# aa_utilities

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
dev_scripts/: debug_container.py  debug_level-adjuster.py  debug_logger.py  debug_logger1.py  debug_logger2.py
dev_scripts/debugging_scripts/: container.py  linear_models.py  logger.py  remove_effects.py  rspace.py
dev_scripts/debugging_scripts/formatters/: human-readable.py  textwrapper.py
dev_scripts/debugging_scripts/linear_models/: absolute-change_from_baseline_lognormal-scale.py  absolute-change_from_baseline_lognormal-scale_via-MMRM.py  absolute_change.py  linear_models.py  percent-change_from_baseline_linear-scale.py  percent-change_from_baseline_lognormal-scale.py  relative-change_between-arms_negative-binomail-response.py
src/aa_utilities/: __init__.py  _configurations.py
src/aa_utilities/computation/: __init__.py  sets.py
src/aa_utilities/computation/modeling/: __init__.py  _linear_models.py  _remove_effects.py
src/aa_utilities/graphics/: _interactive_selection.py
src/aa_utilities/helpers/: __init__.py  _formaters.py  _linkage_tree_parser.py
src/aa_utilities/loggers/: __init__.py  _loggers.py
src/aa_utilities/storage/: _containers.py  checkpoint.py
src/aa_utilities/wrappers/: _rspace.py
src/my_utilities/: __init__.py  _configuration.py  _configurations.py  _logging.py  add_pvalue.py  config.toml  configurations.toml  entimice.py  graphics.py  r_space.py  wrappers.py
src/my_utilities/computation/: __init__.py  modeling.py
src/my_utilities/computation/modeling/: _linear_models.py  _remove_effects.py
src/my_utilities/computations/: __init__.py  _corr.py  _sort.py
src/my_utilities/convenience/: __init__.py  _containers.py  _convenience.py  _formaters.py  _linkage_tree_parser.py  _loggers.py  _restricted_logger.py  logger.py
src/my_utilities/graphic/: _graphics.py  _interactive_selection.py
src/my_utilities/graphics/: __init__.py  _graphics.py  _interactive_selection.py
src/my_utilities/helpers/: __init__.py  _convenience.py  _linkage_tree_parser.py  _loggers.py
src/my_utilities/stat/: stats.py
src/my_utilities/stats/: __init__.py
src/my_utilities/storage/: __init__.py  _containers.py  checkpoint.py
src/my_utilities/wrapper/: __init__.py  _entimice.py
src/my_utilities/wrappers/: __init__.py  _entimice.py  _rspace.py
src/utilities/: __init__.py  annotate.py  config.toml
tests/wrappers/: test_rspace.py
