

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_utilities"
version = "0.0.37"
description = "General utilities that I often use during my day-to-day work"
readme = "README.md"
authors = [{ name = "Amin Allahyar", email = "amin.allahyar@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["utilities", "personal"]
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.urls]
repository    = "https://github.com/aallahyar/my_utilities.git"
documentation = "https://github.com/aallahyar/my_utilities/blob/main/README.md"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.optional-dependencies]
# install with extras:
# pip3 install my_utilities[extras]

extras = [
    "colorama", 
    "ipympl", # if interactive visualization is needed
    "statsmodels", # for expression level correction
]
r_wrapper = [
    "rpy2>=3.5.15", # for R integration
]
# dev   = ["black", "bumpver", "isort", "mypy", "pytest"]

# [project.scripts]
# realpython = "reader.__main__:main"




